--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
 
 /* native elements */
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1 {
     font-family: 'fredokaone', Arial, sans-serif;
     font-weight: bolder;
@@ -120,6 +124,15 @@ footer {
     width: 25vw;
     height: auto;
 
+}
+
+#full-spread img {
+    width: 40vw;
+    height: auto;
+    text-align: center;
+    align-items: center;
+    object-fit: cover;
+    height: auto;
 }
 
 .center video {
@@ -274,4 +287,3 @@ footer {
 .container, .project, .guide{ 
     display: contents;
 }
-
