--- a/css/flex.css
+++ b/css/flex.css
@@ -80,6 +80,12 @@
     justify-content: center;
   }
 
+#full-spread h1 {
+    margin-top: 20rem;
+    font-size: 7.5em;
+    text-align: center;
+}
+
 #full-spread {
     height: 100vh;
 }
@@ -137,5 +143,11 @@
         text-align: center;
         align-items: center;
         width: 75vw;
+    }
+
+    #full-spread h1 {
+        margin-top: 20rem;
+        font-size: 3em;
+        text-align: center;
     }
   }
