--- a/css/main.css
+++ b/css/main.css
@@ -81,11 +81,10 @@ textarea {
     resize: vertical;
 }
 
-#name, #email {
+#name-ex, #email-ex {
     background-color: var(--white-accent);
     color: var(--gray-accent);
     width: 50%;
-    min-height: 2rem;
     border: solid 1px;
     border-color: var(--blurple-accent);
     resize: vertical;
